Refactor various service implementations to enhance code organization and readability by introducing helper methods for validation, data retrieval, and statistics calculation, improving maintainability and streamlining processes across the application.